<resources>
    <string name="app_name">ScoutingApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint_events">Search Events...</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="search_hint_teams">Search Team Number... </string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="information_hint">Enter Additional Information...</string>
    <string name="notes_hint">Enter Additional Notes...</string>
    <string name="button_text">Save</string>
    <string name="class_rank">Classification Rank (1-10): </string>
    <string name="classification">Classification: </string>
    <string name="def">Defenses</string>
    <string name="auto">Autonomous: </string>
    <string name="start_loc">Starting Location: </string>
    <string name="breach_sp">Breach Speed (1-10): </string>
    <string name="high_goal_score">High Goals Scored: </string>
    <string name="high_goal_att">High Goal Attempts: </string>
    <string name="shoot_sp">Shooting Speed: </string>
    <string name="low_goal_score">Low Goals Scored: </string>
    <string name="climb_sp">Climbing Speed (1-10): </string>
    <string name="match_scout">Match Scouting: </string>
</resources>
